# fieldscore

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: scoring.md
examples/: README.md  fields.json  gold.jsonl  pred.jsonl
scripts/: smoke.sh
src/fieldscore/: __init__.py  __main__.py  cli.py  comparators.py  config.py  errors.py  flatten.py  loader.py  report.py  scoring.py
tests/: test_cli.py  test_config.py  test_dates.py  test_flatten.py  test_loader.py  test_misc_comparators.py  test_money.py  test_names.py  test_report.py  test_scoring.py
