[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldscore"
version = "0.1.0"
description = "Per-field precision/recall scoring for JSON extraction tasks with type-aware fuzzy matching."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["extraction", "evaluation", "precision-recall", "llm", "json", "scoring", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
fieldscore = "fieldscore.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/fieldscore"
Repository = "https://github.com/JaydenCJ/fieldscore"
Issues = "https://github.com/JaydenCJ/fieldscore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
